some fixes from prof feadback

--- a/begriffe.tex
+++ b/begriffe.tex
@@ -360,7 +360,7 @@ Im Falle einer Self-Organizing-Map werden die Gruppierungen selbst durch das Sys
 Regression beschreibt den Fall, in welchem Daten generiert werden und das kontinuierlich.
 Ein Anwendungsfall ist das Finden einer zugrundeliegenden Funktion, bei der nur Resultate dieser Funktion vorliegen. 
 Somit werden aus Daten weitere Daten erzeugt.
-So gibt es Abläufe in der Natur, welche approximiert werden, um sie für weitere Systeme möglicherweise zu verwenden. \cite{bishop2006pattern}
+So gibt es Abläufe in der Natur, welche approximiert werden, um sie für weitere Systeme möglicherweise zu verwenden \cite{bishop2006pattern}. 
 
 \subsection{Klassifikation}
 \label{subsec:Classification}
@@ -368,7 +368,7 @@ So gibt es Abläufe in der Natur, welche approximiert werden, um sie für weiter
 Das Klassifikation-Problem ist in gewisser Weise ähnlich den Regression-Problemen. 
 Der Unterschied liegt im Ergebnis, welches produziert wird.  
 Hier werden Daten dem Netzwerk übergeben und dieses muss vorhersagen, zu welcher Klasse sie gehören. Dies wird in einer überwachten Umgebung durchgeführt. 
-Die Klassen für die Vorhersage sind vorab schon bekannt und können mit den Daten aus dem Outputlayer des Netzwerks verglichen werden und infolge Justierungen durchgeführt werden. \cite{AI3} \\
+Die Klassen für die Vorhersage sind vorab schon bekannt und können mit den Daten aus dem Outputlayer des Netzwerks verglichen werden und infolge Justierungen durchgeführt werden \cite{AI3}. \\
 
 \noindent
 Ergebnisse einer Klassifikation sagen aus, zu wie viel Prozent etwas auf den gegebenen Input zutrifft. 
