--- a/einleitung.tex
+++ b/einleitung.tex
@@ -45,13 +45,13 @@ Denn diese Bibliothek bietet eine gute Unterstützung sich dem Gebiet des maschi
 %Einführung in das Thema NNN
 
 Die Arbeit soll das Thema maschinelles Lernen - neuronale Netzwerke so beleuchten, dass es möglich ist diese mit den Grundlagen zu verstehen und zu erlernen. 
-Im Weiteren wird die Bibliothek TensorFlow näher gebracht, welche die Möglichkeit bietet eine Problemstellung zu lösen und diese Lösung direkt praktisch einzusetzen. \newline
+Im Weiteren wird die Bibliothek TensorFlow näher gebracht, welche eine gute Unterstützung bietet, eine Problemstellung zu lösen und diese Lösung direkt in einer Applikation einzusetzen. \newline
 
 \noindent
 Die Betrachtung der benötigten Punkte sowie Gebiete sollte auf breiter Front erfolgen, am Ende sollte jeder Leser ein Verständnis dafür haben. 
 Außerdem sollte er in der Lage sein den Umfang einer solchen Aufgabenstellung fest zu stellen. 
-Als Konsequenz aus dieser Betrachtungsweise können allerdings nicht alle Punkte in ihrer Tiefe erfasst werden. 
-Insbesondere wenn es thematisch in die Tiefe geht. 
+Als Konsequenz aus dieser Betrachtungsweise können allerdings nicht alle Punkte sehr genau erfasst werden. 
+%Insbesondere wenn es thematisch in die Tiefe geht. 
 Hier ist es erforderlich noch weiter Lektüre einzubeziehen und diese zu studieren. \newline
 
 \noindent
