--- a/literatur.bib
+++ b/literatur.bib
@@ -1,3 +1,34 @@
+@article{DBLP:journals/corr/KingmaB14,
+  author    = {Diederik P. Kingma and
+               Jimmy Ba},
+  title     = {Adam: {A} Method for Stochastic Optimization},
+  journal   = {CoRR},
+  volume    = {abs/1412.6980},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.6980},
+  timestamp = {Thu, 01 Jan 2015 19:51:08 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KingmaB14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{deepcoder-learning-write-programs,
+	author = {Balog, Matej and Gaunt, Alexander L. and Brockschmidt, Marc and Nowozin, Sebastian and Tarlow, Daniel},
+	title = {DeepCoder: Learning to Write Programs},
+	booktitle = {Proceedings of ICLR'17},
+	year = {2017},
+	month = {March},
+	abstract = {We develop a first line of attack for solving programming competition-style problems from input-output examples using deep learning. The approach is to train a neural network to predict properties of the program that generated the outputs from the inputs. We use the neural network’s predictions to augment search techniques from the programming languages community, including enumerative search and an SMT-based solver. Empirically, we show that our approach leads to an order of magnitude speedup over the strong non-augmented baselines and a Recurrent
+	Neural Network approach, and that we are able to solve problems of difficulty comparable to the simplest problems on programming competition websites.},
+	publisher = {},
+	url = {https://www.microsoft.com/en-us/research/publication/deepcoder-learning-write-programs/},
+	address = {},
+	pages = {},
+	journal = {},
+	volume = {},
+	chapter = {},
+	isbn = {},
+}
+
 @inproceedings{krizhevsky2012imagenet,
   title={Imagenet classification with deep convolutional neural networks},
   author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
