--- a/zusammenfassungAusblick.tex
+++ b/zusammenfassungAusblick.tex
@@ -6,16 +6,16 @@
 %Maschinelles Lernen sehr einsatzfähig
 \noindent
 Maschinelles Lernen bietet sich an, in sehr vielen Fällen eingesetzt zu werden. 
-Es steht aber fest, dass neuronale Netzwerke nicht etwas außergewöhnliches erschaffen oder gar von sich aus etwas unvorhersehbares produzieren. 
-Im Kern kann jeder Zustand eines Netzwerkes festgestellt werden und somit auch nachvollzogen werden, beziehungsweise Mathematisch nachgerechnet werden. 
+Es steht aber fest, dass neuronale Netzwerke nicht etwas außergewöhnliches erschaffen oder gar von sich aus etwas Unvorhersehbares produzieren. 
+Im Kern kann jeder Zustand eines Netzwerkes festgestellt werden und somit auch nachvollzogen werden, beziehungsweise mathematisch nachgerechnet werden. 
 Grundsätzlich kann jedes Problem, welches sich in irgendeiner Art und Weise als Funktion beschreiben lässt, in einem neuronalen Netzwerk abgebildet werden kann. \newline
 
 %erlernbar & Vertiefen 
 \noindent
-Das Gebiet des maschinellen Lernens bietet eine nicht abschätzbare Gebiet an Möglichkeiten. 
+Das Gebiet des maschinellen Lernens bietet einen nicht abschätzbare Umfang an Möglichkeiten. 
 Trotzdem kann es auf einfache Grundregeln der Mathematik und Informatik herab gebrochen werden und somit auch erlernt werden. 
 Gesamt wird es aber praktisch nie möglich sein, das gesamte Gebiet komplett zu verstehen und zu kennen.
-Es wird eine Möglichkeit geben sich weiter zu bilden und zu Vertiefen. 
+Es wird eine Möglichkeit geben sich weiter zu bilden und zu vertiefen. 
 Sollte trotzdem der Punkt erreicht werden an dem nichts neues mehr gelernt werden kann, dann sollte diese Möglichkeit dazu führen die Forschung anzutreiben und so für eine Weiterentwicklung zu sorgen. \newline
 
 %Zeitaufwändig bauen und trainieren & ressourcen intensive
@@ -44,8 +44,8 @@ Zusätzlich die Möglichkeit direkt ein System in Produktion zu nehmen und dies 
 %immer mehr relevant, nicht explizit entwickelter code sondern selbst entwickelte strukturen
 \noindent
 Die Idee etwas nicht explizit zu Programmieren sondern das System die Muster oder die Lösung selber finden zu lassen, wird in Zukunft sehr wahrscheinlich noch sehr viel öfter zu sehen sein. 
-In diesem Fall wird es ein Austauschformat geben müssen, mit welchem solche System ausgetauscht werden können, wie in der aktuellen Zeit mit Protokollen Daten ausgetauscht werden und Logik mit Mathematik und Programmiersprachen abgebildet wird. 
-Eine Mischform existiert hier zu bereits von Microsoft \textbf{TODO REF|LINK}, indem ein Machine Intelligence System eine Problemstellung entgegennimmt und durch Hilfe von GitHub automatisch ein Programm entwickelt welches die gegebenen Problemstellung löst. 
+In diesem Fall wird es ein Austauschformat geben müssen, mit welchem solche Systeme ausgetauscht werden können, wie in der aktuellen Zeit mit Protokollen Daten ausgetauscht werden und Logik mit Mathematik und Programmiersprachen abgebildet wird. 
+Eine Mischform existiert hier zu bereits von Microsoft und der Universität Cambridge \cite{deepcoder-learning-write-programs}, indem ein Machine Intelligence System eine Problemstellung entgegennimmt und durch Hilfe von bestehenden Code automatisch ein Programm entwickelt welches die gegebenen Problemstellung löst. 
 In diesem Fall werden Codeteile zusammen kopiert und so zu einem Programm ausgebaut. \newline
 
 %unüberwachtes lernen im sinne eines kindes beim lernen
